Ensure flash messages on plege form do not cause pledge box to get too wide on small screens.

--- a/app/assets/stylesheets/pledge.css
+++ b/app/assets/stylesheets/pledge.css
@@ -255,4 +255,9 @@
   #pledge form .button {
     font-size: 1.1em;
   }
+  
+  #pledge form .flash {
+    width: 13.7em;
+  }
+  
 }
